<resources>
    <string name="app_name">MovieS</string>
    <string name="movies_list">Movies list</string>
    <string name="avengers_end_game">"Avengers:\nEnd Game"</string>
    <string name="avengers_end_game2">Avengers: End Game</string>
    <string name="_137_min">137 min</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="_13">13+</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="retry">Retry</string>

    <string name="chanel_new_top_rated_movie">New top rated movie</string>
    <string name="chanel_new_top_rated_movie_description">New top rated movie appears</string>
    <string name="new_top_rated_movie_with_rating">New top rated movie appears with raring %1$s</string>
    <string name="rating_text">Rating: %1$s</string>

    <string name="button_schedule_watch">Add to calendar</string>
    <string name="button_trailer_watch">Watch a trailer</string>

    <string name="calendar_event_title">To see a movie \"%1$s\"</string>

    <string name="permission_not_granted_text">Calendar permission not granted</string>
    <string name="permission_dialog_explanation_text">To continue please grant access to calendar</string>
    <string name="permission_dialog_denied_text">This feature is not available without calendar permissions. Open app settings?</string>

    <string name="no_video_found_message">No video found</string>
</resources>