<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPosterBig"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/avengers_orig" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPosterGradient"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gradient" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView5"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="226dp"
            android:checkable="false"
            android:padding="4dp"
            app:cardBackgroundColor="@color/rating_bk_gray"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAgeRating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="@style/main_text_12sp"
                tools:text="13+" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="254dp"
            android:lineSpacingExtra="0sp"
            android:textAppearance="@style/details_header_text_40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/avengers_end_game" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/red_text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@string/action_adventure_drama" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTags"
            tools:rating="4.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="true"
            android:textAppearance="@style/grayed_text_14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toTopOf="@id/ratingBar"
            tools:text="@string/_125_reviews" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/storyline"
            android:textAppearance="@style/title_text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReviews" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:textAppearance="@style/main_text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView5"
            tools:text="@string/description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/cast"
            android:textAppearance="@style/title_text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="109dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCast"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>