<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_500"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView1"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gradient" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="226dp"
            android:text="@string/_13"
            android:textAppearance="@style/main_text_12sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView1"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="254dp"
            android:letterSpacing="-0.01"
            android:text="@string/avengers_end_game"
            android:textAppearance="@style/details_header_text_40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/action_adventure_drama"
            android:textAppearance="@style/red_text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView1" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_125_reviews"
            android:textAppearance="@style/grayed_text_14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/materialTextView2"
            app:layout_constraintTop_toTopOf="@id/ratingBar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/storyline"
            android:textAppearance="@style/title_text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/description"
            android:textAppearance="@style/main_text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/storyline"
            android:textAppearance="@style/title_text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView6" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/materialCardView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView21"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/downey_jr" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView81"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/robert_downey_jr"
                android:textAppearance="@style/main_text_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatImageView21" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/materialCardView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView23"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialCardView21"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView22"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/evans_c" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView82"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/chris_evans"
                android:textAppearance="@style/main_text_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatImageView22" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/materialCardView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialCardView22"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView23"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ruffalo_m" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView83"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/mark_ruffalo"
                android:textAppearance="@style/main_text_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatImageView23" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/materialCardView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialCardView23"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView24"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hemswoth_c" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView84"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/chris_hemsworth"
                android:textAppearance="@style/main_text_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatImageView24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>